extensions/wikia/Chat/css/ChatRailModule.scss
@import "../../../../skins/oasis/css/core/color";
@import "../../../../skins/oasis/css/mixins/border-radius";

$color-chat-live: $color-buttons;
$color-chat-live-text: $color-button-text;
$color-chat-live-corner: mix($color-chat-live, #000);
$color-chat-avatar-border: $color-page-border;

.ChatModule {

	.chat-live {
		@include border-radius-nw(3px);
		@include border-radius-ne(3px);
		@include border-radius-sw(3px);
		background: $color-chat-live;
		color: $color-chat-live-text;
		font-size: 14px;
		padding: 5px 12px;
		position: absolute;
		right: -4px;
		top: 21px;
		&:before {
			border-width: 2px;
			border-style: solid;
			border-color: $color-chat-live-corner transparent transparent $color-chat-live-corner;
			content: url(/skins/common/blank.gif); /* $wgCdnStylePath */
			height: 0px;
			width: 0px;
			position: absolute;
			bottom: -4px;
			right: 0;
		}
	}
	
	.chat-join {
		text-align: right;
	}
	
	.avatar {
		border: 1px solid $color-chat-avatar-border;
		height: 32px;
		margin-right: 10px;
		vertical-align: middle;
		width: 32px;
	}
	
	.chat-whos-here {
		margin: 10px 0;
		h2 {
			display: block !important;
			margin-bottom: 8px;
		}
		.avatar {
			margin: 0;
		}
		li {
			display: inline;
			margin: 0 0 0 15px;
			&:first-child {
				margin: 0;
			}
		}
	}
	
	&.module h1 {
		margin-bottom: 15px;
	}
	&.module h2 {
		font-size: 13px;
		padding: 0;
	}
}

