case 4724 - fix wrapping for long wiki names in chat entry module
git-svn-id: svn+ssh://svn.wikia-code.com/svn/wikia/trunk@36238 e846bd91-c042-42a7-a218-4b65e2c1904d

--- a/extensions/wikia/Chat/css/ChatRailModule.scss
+++ b/extensions/wikia/Chat/css/ChatRailModule.scss
@@ -64,6 +64,7 @@ $color-chat-avatar-border: $color-page-border;
 	
 	&.module h1 {
 		margin-bottom: 15px;
+		margin-right: 50px;
 	}
 	&.module h2 {
 		font-size: 13px;
